# gird

./: .clang-tidy  CMakeLists.txt
src/: BuildFinancialColumns.h  FinancialDataGen.h  GridFramework.cpp  GridFramework.h  GridModel.h  GridPersistence.cpp  GridPersistence.h  GridViewImGui.cpp  GridViewImGui.h  PlatformPaths.h  SimpleRowSource.h  main.cpp
tools/: run-web.sh
